--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,12 +55,16 @@
         "cmath": "c",
         "utils.h": "c",
         "task.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "serial.h": "c"
     },
     "editor.formatOnSave": false,
     "cSpell.words": [
         "ssid"
     ],
     "idf.port": "/dev/ttyACM0",
-    "C_Cpp.intelliSenseEngine": "Tag Parser"
+    "C_Cpp.intelliSenseEngine": "Tag Parser",
+    "idf.customExtraVars": {
+        "IDF_TARGET": "esp32s3"
+    }
 }
